[package]
name = "anr_tool"
version = "0.1.0"
edition = "2021"
authors = []
description = ""
license = "MIT"

[profile.release]
# 防逆向核心配置
opt-level = 3
lto = true                  # 全局链接时优化，抹平函数边界，大幅提升反编译难度
codegen-units = 1           # 单编译单元，消除分段特征
panic = "abort"             # 移除panic字符串、栈展开元数据
strip = "symbols"           # 编译阶段自动剥离符号
debug = false
debug-assertions = false
overflow-checks = false
# 强制禁用内置源码路径字符串
remap-path-prefix = { "." = "" }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
filetime = "0.2"
walkdir = "2.5"
chrono = "0.4"
nix = { version = "0.29", features = ["process", "signal"] }
signal-hook = "0.3"
ctrlc = "3.4"
libc = "0.2"
